# cloudtrail-detection-lab

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
docs/: demo.md  recruiter-brief.md  roadmap.md
examples/: cloudtrail.json
src/cloudtrail_detection_lab/: __init__.py  cli.py
tests/: test_core.py
