[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudtrail-detection-lab"
version = "0.1.0"
description = "CloudTrail Detection Lab"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yusuf Kursat Tuncel"}]
keywords = ["cybersecurity", "security", "portfolio", "defensive-security"]

[project.scripts]
cloudtrail-detection-lab = "cloudtrail_detection_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
